--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ function set_page(item){
           var content = document.getElementById("Iframe");
          
 
-         //var theme = content.contentWindow.document.getElement
-        //frame.contentWindow.postMessage(/*any variable or object here*/, '*');     
+         var theme = content.contentWindow.document.getElement
+        frame.contentWindow.postMessage(/*any variable or object here*/, '*');     
    }
 
 
