--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
   <script type="text/javascript">
 
 // Works with $.get too!
-function change_css(item){
-          var content = document.getElementById("Iframe");
+function set_page(item){
+  
+}
+ function change_css(item){
+          alert("WTF")
+          //var content = document.getElementById("Iframe");
          
 
-         var theme = content.contentWindow.document.getElement
-        frame.contentWindow.postMessage(/*any variable or object here*/, '*');     
+         //var theme = content.contentWindow.document.getElement
+        //frame.contentWindow.postMessage(/*any variable or object here*/, '*');     
    }
 
 
