--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@ function set_page(item){
   
 }
  function change_css(item){
-          alert("WTF")
-          //var content = document.getElementById("Iframe");
+          var content = document.getElementById("Iframe");
          
 
-         //var theme = content.contentWindow.document.getElement
-        //frame.contentWindow.postMessage(/*any variable or object here*/, '*');     
+         var theme = content.contentWindow.document.getElement
+        frame.contentWindow.postMessage(/*any variable or object here*/, '*');     
    }
 
 
