--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-	</script>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
  <link rel="stylesheet" type="text/css" href="style/home.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -16,10 +15,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="script/1.js"></script> 
+  <script src="script/1.js"></script> 
 
   <title>Home</title>
-  <script type="text/javascript">
+  <script>
 
 // Works with $.get too!
 function set_page(item){
@@ -47,7 +46,7 @@ function set_page(item){
 
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
-      <li><a href="docs/bloomberg/index.html" onclick="set_page('docs/bloomberg/index.html') "target="targetframe">Bloomberg</a></li>
+      <li><a href="docs/bloomberg/index.html" onclick="set_page('docs/bloomberg/index.html')" target="targetframe">Bloomberg</a></li>
       <li><a href="docs/harpers/Harpers_Final.html" target="targetframe">Harpers</a></li>
       <li><a href="docs/huffington/Huffington_Final.html" target="targetframe">Huffington</a></li>
       <li><a href="docs/thecut/thecut.html" target="targetframe">The Cut</a></li>
@@ -86,7 +85,7 @@ function set_page(item){
   </header>
 
  <div id="content">
-    <iframe src="docs/bloomberg/index.html" width="100%" height="100%" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" >
+    <iframe src="docs/bloomberg/index.html" width="100" height="100" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" >
     </iframe>
 
   </div>
@@ -115,7 +114,7 @@ function set_page(item){
  -->
   <!--<div id="nav">
  		
- 		<!-- <div id="mySidebar" class="sidebar">
+ 		<div id="mySidebar" class="sidebar">
  		 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
  		<p>Documents</p>
  		<ul>
@@ -147,10 +146,4 @@ function set_page(item){
   <!-- <div id="rnav">
   </div> -->
  </body>
- <script type="text/javascript">
- function swipe_css(sheet){
-          document.getElementById('style').setAttribute('href', item)
-  }
-
- </script>
 </html>
