--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ function set_page(item){
   </header>
 
  <div id="content">
-    <iframe src="docs/bloomberg/index.html" width="100" height="100" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" >
+    <iframe src="docs/bloomberg/index.html" width="100%" height="100%" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" >
     </iframe>
 
   </div>
