--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 // Works with $.get too!
 
-function change_css(item){
+function change(item){
           var content = document.getElementById("Iframe");
          
 
@@ -58,7 +58,7 @@ function change_css(item){
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Style
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
-      <li><a href="#" onclick= "change_css('style/ancient.css')">I</a></li>
+      <li><a href="#" onclick= "change('style/ancient.css')">I</a></li>
 
       <li><a href="#">II</a></li>
       <li><a href="#">III</a></li>
