--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script src="script/1.js"></script>
-  <script src="js/1.js"></script> 
+  <script src="js/home.js"></script> 
 
 
   <title>Home</title>
