--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
 
  function change_css(item){
           alert("WTF")
-          //var content = document.getElementById("Iframe");
-         
-
-         //var theme = content.contentWindow.document.getElement
-        //frame.contentWindow.postMessage(/*any variable or object here*/, '*');     
+          var content = document.getElementById("Iframe");
+          var theme = content.contentWindow.document.getElement
+	  frame.contentWindow.postMessage(/*any variable or object here*/, '*');     
    }
 
 
