--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 // Works with $.get too!
 
  function change_css(item){
-          var content = document.getElementById("Iframe");
-          var theme = content.contentWindow.document.getElement
-	  frame.contentWindow.postMessage(/*any variable or object here*/, '*');     
+	alert("WTF")    
    }
 
 
