--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 // Works with $.get too!
 
  function change_css(item){
-	alert("WTF")    
+	var cssLink = document.createElement("link");
+cssLink.href = item; 
+cssLink.rel = "stylesheet"; 
+cssLink.type = "text/css"; 
+frames['Iframe'].document.head.appendChild(cssLink);  
    }
 
 
