--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
 // Works with $.get too!
 
  function change_css(item){
-	var cssLink = document.createElement("link");
-cssLink.href = item; 
-cssLink.rel = "stylesheet"; 
-cssLink.type = "text/css"; 
-frames['Iframe'].document.head.appendChild(cssLink);  
+  var $head = $("#Iframe").contents().find("head"); 
+var url = item;
+$head.append($("<link/>", { rel: "stylesheet", href: url, type: "text/css" } ));     
+   }
    }
 
 
