change set attribute value to default

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      var content = document.getElementById("Iframe");
 
      var theme = content.contentWindow.document.getElementById("style")
-     theme.setAttribute("href", "../../../css/" + input.name + ".css");
+     theme.setAttribute(item);
 
    }
 
