--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
      var theme = content.contentWindow.document.getElementById("style")
      theme.setAttribute("href",item);
+     window.location.href = item
+
 
    }
 
