--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
      var content = document.getElementById("Iframe");
 
      var theme = content.contentWindow.document.getElementById("style")
-     theme.setAttribute("href",item)
+     var z= theme.setAttribute("href",item)
+     alert(z)
   </script>
  </head>
  <body style="">
