--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
      var content = document.getElementById("Iframe");
 
      var theme = content.contentWindow.document.getElementById("style")
-     var z= theme.setAttribute("href",item)
-     alert(z)
+     theme.setAttribute("href",item)
+   
   </script>
  </head>
  <body style="">
