--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
 // Works with $.get too!
 
  function change_css(item){
-     /*var content = document.getElementById("Iframe");
+     var content = document.getElementById("Iframe");
 
      var theme = content.contentWindow.document.getElementById("style")
      theme.setAttribute("href",item)
-     window.location.href = item*/
-     window.location.href = item
  }
   </script>
  </head>
