--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
      var content = document.getElementById("Iframe");
 
      var theme = content.contentWindow.document.getElementById("style")
-     theme.setAttribute("href",item)
+//theme.setAttribute("href",item)
+     
+     theme.href = item
+
  }
   </script>
  </head>
