--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 //theme.setAttribute("href",item)
      
      theme.href = item
+	var form = parent.document.getElementById('myForm');
+	 alert(form)
+
 
  }
   </script>
