--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
      
      theme.href = item
 	var form = parent.document.getElementById('myForm');
-	 alert(form)
-
-
+	document.getElementById("demo").innerHTML = form;
  }
   </script>
  </head>
@@ -80,6 +78,7 @@
       <li><a id="active">Cover</a></li>
     </ul>
 </div>
+	    <span id="demo"></span>
 </div>
 </div>
 </div>
