--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <li><a id="active">Cover</a></li>
     </ul>
 </div>
-	    <span id="demo"></span>
+	    <span id="demo">Hiii</span>
 </div>
 </div>
 </div>
