--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      
      theme.href = item
 	var form = parent.document.getElementById('myForm');
-	document.getElementById("demo").innerHTML = form;
+	document.getElementById("demo").innerHTML = 4;
  }
   </script>
  </head>
