--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 //theme.setAttribute("href",item)
      
      theme.href = item
-	var form = parent.document.getElementById('myForm');
+	var form = content.contentWindow.document.getElementById('myForm');
 	document.getElementById("demo").innerHTML = form;
  }
   </script>
