--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
       <li><a href="docs/tls/TimesLiterarySupplement_Final.html" target="targetframe">TLS</a></li>
     </ul>
   </div>
-    </div>
+    </div> 
     <div class="col-sm-2">
 
     <div class="dropdown">
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Style
     <span class="caret"></span></button> 
     <ul class="dropdown-menu">
-      <li><a href="#" onclick= "change_css('style/slide.css')">I</a></li>
+      <li><a href="#" onclick= "change_css('../../style/slide.css')">I</a></li>
 
       <li><a href="#">II</a></li>
       <li><a href="#">III</a></li>
