--- a/index.html
+++ b/index.html
@@ -1,96 +1,151 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Japan&apos;s Prisons Are a Haven for Elderly Women</title>
-        <link rel="stylesheet" type="text/css" href="ancient.css">
-        <style type="text/css">
-          
-         </style>
-  </head>
+ <head>
+	</script>
+ <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+ <link rel="stylesheet" type="text/css" href="style/home.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="script/1.js"></script> 
 
-  <body>
+  <title>Home</title>
+  <script type="text/javascript">
+// Works with $.get too!
+ function change_css(item){
+     var content = document.getElementById("Iframe");
+     content.contentWindow.document.getElementById("style").setAttribute("href",item)
+     
+     /*theme.href = item
+	var form = content.contentWindow.document.getElementById('myForm');
+	document.getElementById("demo").innerHTML = form.innerText;*/
+ }
+  </script>
+ </head>
+ <body style="">
+ 	<header> 
+<div class="container">
 
-    <header>
-      <h1>Bloomberg Businessweek</h1>
-      <h2>Japan&apos;s Prisons Are a Haven for Elderly Women</h2>
-      <h3>Lonely seniors are shoplifting in search of the community and stability of jail.</h3>
-      <p>By Shiho Fukada</p>
-      <p>By 16 marzo 2018, 09:00 CET</p>
-    </header>
+  <div class="row">
+    <div class="col-sm-2">
+    <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Pages
 
-    <main>
-      <p>Every aging society faces distinct challenges. But Japan, with the world&apos;s oldest population (27.3 percent of its citizens are 65 or older, almost twice the share in the U.S.), has been dealing with one it didn&apos;t foresee: senior crime. Complaints and arrests involving elderly people, and women in particular, are taking place at rates above those of any other demographic group. Almost 1 in 5 women in Japanese prisons is a senior. Their crimes are usually minor—9 in 10 senior women who&apos;ve been convicted were found guilty of shoplifting.<br><br>
-  	     Why have so many otherwise law-abiding elderly women resorted to petty theft? Caring for Japanese seniors once fell to families and communities, but that&apos;s changing. From 1980 to 2015, the number of seniors living alone increased more than sixfold, to almost 6 million. And a 2017 survey by Tokyo&apos;s government found that more than half of seniors caught shoplifting live alone; 40 percent either don&apos;t have family or rarely speak with relatives. These people often say they have no one to turn to when they need help.</p>
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="docs/bloomberg/index.html" onclick="set_page('docs/bloomberg/index.html') "target="targetframe">Bloomberg</a></li>
+      <li><a href="docs/harpers/Harpers_Final.html" target="targetframe">Harpers</a></li>
+      <li><a href="docs/huffington/Huffington_Final.html" target="targetframe">Huffington</a></li>
+      <li><a href="docs/thecut/thecut.html" target="targetframe">The Cut</a></li>
+      <li><a href="docs/tls/TimesLiterarySupplement_Final.html" target="targetframe">TLS</a></li>
+    </ul>
+  </div>
+    </div> 
+    <div class="col-sm-2">
 
-    	<figure>
-    	  <img src="image1.png" alt="Share of Criminal Offenders 60 and Older in Japan" width="100%">
-    	</figure>
+    <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Style
+    <span class="caret"></span></button> 
+    <ul class="dropdown-menu">
+      <li><a href="#" onclick= "change_css('../../style/ancient.css')">I</a></li>
 
-    	<p>Even women with a place to go describe feeling invisible. &ldquo;They may have a house. They may have a family. But that doesn&apos;t mean they have a place they feel at home,&rdquo; says Yumi Muranaka, head warden of Iwakuni Women&apos;s Prison, 30 miles outside Hiroshima. &ldquo;They feel they are not understood. They feel they are only recognized as someone who gets the house chores done.&rdquo;<br><br>
-    	   Elderly women are also often economically vulnerable—nearly half of those 65 or older who live alone also live in poverty relative to the broader population, for example, compared with 29 percent of men. &ldquo;My husband died last year,&rdquo; one inmate says. &ldquo;We didn&apos;t have any children, so I was all alone. I went to a supermarket to buy vegetables, and I saw a package of beef. I wanted it, but I thought it would be a financial burden. So I took it.&rdquo;<br>
-    	   Neither the government nor the private sector has established an effective rehabilitation program for seniors, and the costs to keep them in prison are rising fast. Expenses associated with elder care helped push annual medical costs at correctional facilities past 6 billion yen (more than $50 million) in 2015, an 80 percent increase from a decade before. Specialized workers have been hired to help older inmates with bathing and toileting during the day, but at night these tasks are handled by guards.<br><br>
-    	   At some facilities, being a correctional officer has come to resemble being a nursing-home attendant. Satomi Kezuka, a veteran officer at Tochigi Women&apos;s Prison, about 60 miles north of Tokyo, says her duties now include dealing with incontinence. &ldquo;They are ashamed and hide their underwear,&rdquo; she says of the inmates. &ldquo;I tell them to bring it to me, and I will have it washed.&rdquo; More than a third of female correctional officers quit their jobs within three years.<br><br>
-    	   In 2016, Japan&apos;s parliament passed a law aiming to ensure that recidivist seniors get support from the country&apos;s welfare and social-service systems. Since then, prosecutor&apos;s offices and prisons have worked closely with government agencies to get senior offenders the assistance they need. But the problems that lead these women to seek the relative comfort of jail lie beyond the system&apos;s reach.</p>
+      <li><a href="#">II</a></li>
+      <li><a href="#">III</a></li>
+      <li><a href="#">IV</a></li>
+      <li><a href="#">V</a></li>
+      <li><a href="#">VI</a></li>
+    </ul>
+  </div></div>
+    <div class="col-sm-5">
+      <div id="menu">
+    <ul> 
+      <li><a>Disclaimner</a></li>
+      <li><a>Documentation</a></li>
+      <li><a>About</a></li>
+      <li><a id="active">Cover</a></li>
+    </ul>
+</div>
+	    <span id="demo">Hiii</span>
+</div>
+</div>
+</div>
 
-    	<figure>
-    	  <img src="image2.jpg" alt="old woman in prison" width="100%">
-          <figcaption>&ldquo;I was 84 when I came to prison for the first time.&rdquo; PHOTOGRAPHER: SHIHO FUKADA</figcaption>
-        </figure>
+  </header>
 
-    	<p><em>Ms. F, 89</em><br>Has stolen rice, strawberries, cold medicine<br>Second term, sentenced to a year and a half<br>Has a daughter and a grandchild<br><br>
-    	&ldquo;I was living alone on welfare. I used to live with my daughter&apos;s family and used all my savings taking care of an abusive and violent son-in-law.&rdquo;</p>
+ <div id="content">
+    <iframe src="docs/bloomberg/index.html" width="100%" height="100%" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" >
+    </iframe>
 
-    	<figure>
-    	  <img src="image3.jpg" alt="woman in prison and clothes" width="100%">
-    	  <figcaption>PHOTOGRAPHER: SHIHO FUKADA</figcaption>
-        </figure>
+  </div>
 
-    	<p><em>Ms. A, 67</em><br>Has stolen clothing<br>First term, sentenced to two years, three months<br>Has a husband, two sons, and three grandchildren<br><br>
-    	&ldquo;I shoplifted more than 20 times, all clothes, not expensive ones, mostly on sale on the street. It&apos;s not that I was in need of money. The first time I shoplifted, I didn&apos;t get caught. I learned that I could obtain what I wanted without paying for it, which I found fun, amusing, exciting.<br><br>
-    	&ldquo;My husband has been supportive. He writes me regularly. My two sons are angry—my three grandchildren don&apos;t know I&apos;m here. They think I&apos;m hospitalized.&rdquo;</p>
-
-        <figure>
-    	  <img src="image4.jpg" alt="woman in prison and lockers" width="100%">
-    	  <figcaption>PHOTOGRAPHER: SHIHO FUKADA</figcaption>
-        </figure>
-
-    	<p><em>Ms. T, 80</em><br>Has stolen cod roe, seeds, a frying pan<br>Fourth term, sentenced to two and a half years<br>Has a husband, a son, and a daughter<br><br>
-    	&ldquo;When I was young, I didn&apos;t think about stealing. All I thought about was working hard. I worked at a rubber factory for 20 years and then as a care worker at a hospital. Money was always tight, but we still got to send our son to college.<br>
-    	&ldquo;My husband had a stroke six years ago and has been bedridden ever since. He also has dementia and suffers from delusions and paranoia. It was a lot to take care of him physically and emotionally because of my old age. But I couldn&apos;t talk about my stress with anyone because I was ashamed.<br><br>
-    	&ldquo;I was imprisoned for the first time when I was 70. When I shoplifted, I had money in my wallet. Then I thought about my life. I didn&apos;t want to go home, and I had nowhere else to go. Asking for help in prison was the only way.<br>
-    	&ldquo;My life is much easier in prison. I can be myself and breathe, however temporarily. My son tells me I&apos;m ill and I should be hospitalized in a mental institution and take it easy. But I don&apos;t think I&apos;m ill. I think my anxiety drove me to steal.&rdquo;</p>
-
-    	<figure>
-    	  <img src="image5.jpg" alt="woman in prison and sewing machine" width="100%">
-    	  <figcaption>PHOTOGRAPHER: SHIHO FUKADA</figcaption>
-        </figure>
-
-    	<p><em>Ms. N, 80</em><br>Has stolen a paperback, croquettes, a hand fan<br>Third term, sentenced to three years, two months<br>Has a husband, two sons, and six grandchildren<br><br>
-    	&ldquo;I was alone every day and feeling very lonely. My husband gave me a lot of money, and people always told me how lucky I was, but money wasn&apos;t what I wanted. It didn&apos;t make me happy at all.<br><br>
-    	&ldquo;The first time I shoplifted was about 13 years ago. I wandered into a bookstore in town and stole a paperback novel. I was caught, taken to a police station, and questioned by the sweetest police officer. He was so kind. He listened to everything I wanted to say. I felt I was being heard for the first time in my life. In the end, he gently tapped on my shoulder and said, &lsquo;I understand you were lonely, but don&apos;t do this again.&apos; <br><br>
-    	&ldquo;I can&apos;t tell you how much I enjoy working in the prison factory. The other day, when I was complimented on how efficient and meticulous I was, I grasped the joy of working. I regret that I never worked. My life would have been different.<br>
-    	&ldquo;I enjoy my life in prison more. There are always people around, and I don&apos;t feel lonely here. When I got out the second time, I promised that I wouldn&apos;t go back. But when I was out, I couldn&apos;t help feeling nostalgic.&rdquo;</p>
-
-    	<figure>
-    	  <img src="image6.jpg" alt="woman in prison playing with a ball" width="100%">
-    	  <figcaption>PHOTOGRAPHER: SHIHO FUKADA</figcaption>
-        </figure>
-
-        <p><em>Ms. K, 74</em><br>Has stolen Coca-Cola, orange juice<br>Third term, sentence undisclosed<br>Has a son and a daughter<br>
-    	&ldquo;I was living on welfare. It was hard. When I&apos;m released, I will manage to live with 1,000 yen [$9] a day. I don&apos;t have anything to look forward to outside.&rdquo;</p>
-    	<figure>
-    	  <img src="image7.jpg" alt="woman in prison with two guards" width="100%">
-    	  <figcaption>PHOTOGRAPHER: SHIHO FUKADA</figcaption>
-        </figure>
-    	<p><em>Ms. O, 78</em><br>Has stolen energy drinks, coffee, tea, a rice ball, a mango<br>Third term, sentenced to one year, five months<br>Has a daughter and a grandson<br>
-    	&ldquo;Prison is an oasis for me—a place for relaxation and comfort. I don&apos;t have freedom here, but I have nothing to worry about, either. There are many people to talk to. They provide us with nutritious meals three times a day.<br>
-    	&ldquo;My daughter visits once a month. She says &lsquo;I don&apos;t feel sorry for you. You&apos;re pathetic.&apos; I think she&apos;s right.&rdquo;
-
-    	<em>This reporting was supported by the Pulitzer Center on Crisis Reporting and the International Women&apos;s Media Foundation.</em></p>
-
-    </main>
-
-  </body>
-
+ <!-- <div class="container" id="dr1">
+   <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Pages
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="#">HTML</a></li>
+      <li><a href="#">CSS</a></li>
+      <li><a href="#">JavaScript</a></li>
+    </ul>
+  </div>
+   <div class="container" id="dr2">
+   <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Style
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="#">HTML</a></li>
+      <li><a href="#">CSS</a></li>
+      <li><a href="#">JavaScript</a></li>
+    </ul>
+  </div>
+</div>
+ -->
+  <!--<div id="nav">
+ 		
+ 		<!-- <div id="mySidebar" class="sidebar">
+ 		 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+ 		<p>Documents</p>
+ 		<ul>
+    <li><a href="/home/hizkiel/Desktop/DHDK/web/project/docs/bloomberg/index.html">Bloomberg</a></li>
+ 		<li>Harper</li>
+ 		<li>Huffington</li>
+ 		<li>The cut</li>
+ 		<li>TLS</li>
+ 		</ul>
+ 		<p>Styles</p>
+ 		<ul>     
+ 		<li <a onclick="swipe_css('/home/hizkiel/Desktop/DHDK/web/project/style/ancient.css')">I</a></li>
+		<li>II</li>
+ 		<li>III</li>
+ 		<li>IV</li>
+ 		<li>V</li>
+ 		<li>VI</li>
+ 		</ul>
+  </div>
+    <ul>
+    <li><a href="/home/hizkiel/Desktop/DHDK/web/project/docs/bloomberg/index.html">A</a></li>
+    <li><i class="fa fa-search"></i></li>
+    <li>Huffington</li>
+    <li>The cut</li>
+    <li>TLS</li>
+    </ul>
+ 	</div>-->
+ 
+  <!-- <div id="rnav">
+  </div> -->
+ </body>
+ <script type="text/javascript">
+ function swipe_css(sheet){
+          document.getElementById('style').setAttribute('href', item)
+  }
+ </script>
 </html>
