--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <li><a href="#">III</a></li>
       <li><a href="#">IV</a></li>
       <li><a href="#">V</a></li>
-      <li><a href="#" onclick="change_css('../../style/new.css')">VI</a></li>
+      <li><a href="#" onclick="change_css('../../style/slide.css')">VI</a></li>
     </ul>
   </div></div>
     <div class="col-sm-5">
