--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
-      <li><a href="docs/bloomberg/index.html" onclick="set_page('docs/bloomberg/index.html') "target="targetframe">Bloomberg</a></li>
+      <li><a href="docs/bloomberg/index.html" target="targetframe">Bloomberg</a></li>
       <li><a href="docs/harpers/Harpers_Final.html" target="targetframe">Harpers</a></li>
       <li><a href="docs/huffington/Huffington_Final.html" target="targetframe">Huffington</a></li>
       <li><a href="docs/thecut/thecut.html" target="targetframe">The Cut</a></li>
