--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Style
     <span class="caret"></span></button> 
     <ul class="dropdown-menu">
-      <li><a href="#" onclick= "change_css('../../style/ancient.css')">I</a></li>
+      <li><a href="#" onclick= "change_css('../../style/slide.css')">I</a></li>
 
       <li><a href="#">II</a></li>
       <li><a href="#">III</a></li>
