--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	var imported = document.createElement('script');
 	imported.src = 'js/new.js';
 	content.contentWindow.document.head.appendChild(imported);
+		 change_css(item)
 	  }
   </script>
  </head>
