--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-	</script>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
  <link rel="stylesheet" type="text/css" href="style/home.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -16,10 +15,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="script/1.js"></script> 
+  <script src="script/1.js"></script> 
 
   <title>Home</title>
-  <script type="text/javascript">
+  <script>
 // Works with $.get too!
  function change_css(item){
      var content = document.getElementById("Iframe");
@@ -118,7 +117,7 @@
  -->
   <!--<div id="nav">
  		
- 		<!-- <div id="mySidebar" class="sidebar">
+ 		<div id="mySidebar" class="sidebar">
  		 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
  		<p>Documents</p>
  		<ul>
