--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	content.contentWindow.document.head.appendChild(imported);*/
 	var content = document.getElementById("Iframe");
      	content.contentWindow.document.getElementById("scri").setAttribute("href",script)
+		  alert(script)
 		 change_css(style)
 	  }
   </script>
