--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	imported.src = 'js/new.js';
 	content.contentWindow.document.head.appendChild(imported);*/
 	var content = document.getElementById("Iframe");
-     	content.contentWindow.document.getElementById("scri").setAttribute("href",script)
+     	content.contentWindow.document.getElementById("scrjki").setAttribute("href",script)
 		  alert(script)
 		 change_css(style)
 	  }
