--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
       <li><a href="#">II</a></li>
       <li><a href="#">III</a></li>
-      <li><a href="#">IV</a></li>
-      <li><a href="#">V</a></li>
+      <li><a href="#" onclick="change_css('../../style/css_primo_novecento_finale.css')">First 19th Century Style</a></li>
+      <li><a href="#" onclick="change_css('../../style/css_fine_novecento_finale.css')">End Of 19th Century Style</a></li>
 	    <li><a href="#" onclick="add_script('../../style/slide.css','../../js/new.js')">VI</a></li>
     </ul>
   </div></div>
