--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Style
     <span class="caret"></span></button> 
     <ul class="dropdown-menu">
-      <li><a href="#" onclick= "change_css('../../style/slide.css')">I</a></li>
+      <li><a href="#">I</a></li>
 
       <li><a href="#">II</a></li>
       <li><a href="#">III</a></li>
       <li><a href="#" onclick="change_css('../../style/css_primo_novecento_finale.css')">First 19th Century Style</a></li>
       <li><a href="#" onclick="change_css('../../style/css_fine_novecento_finale.css')">End Of 19th Century Style</a></li>
-	    <li><a href="#" onclick="add_script('../../style/slide.css','../../js/new.js')">VI</a></li>
+      <li><a href="#">VI</a></li>
     </ul>
   </div></div>
     <div class="col-sm-5">
