--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	var form = content.contentWindow.document.getElementById('myForm');
 	document.getElementById("demo").innerHTML = form.innerText;*/
  }
-	  function add_script(style, script){
+	  function add_script(script){
     	 /*var content = document.getElementById("Iframe");
 	var imported = document.createElement('script');
 	imported.src = 'js/new.js';
@@ -70,7 +70,7 @@
       <li><a href="#">III</a></li>
       <li><a href="#" onclick="change_css('../../style/css_primo_novecento_finale.css')">First 19th Century Style</a></li>
       <li><a href="#" onclick="change_css('../../style/css_fine_novecento_finale.css')">End Of 19th Century Style</a></li>
-      <li><a href="#">VI</a></li>
+      <li><a href="#" onclick ="add_script('../../js/new.js')">VI</a></li>
     </ul>
   </div></div>
     <div class="col-sm-5">
