--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="container">
 
   <div class="row">
-    <div class="col-sm-2">
+    <div class="col-sm-2" id="btn-sx">
     <div class="dropdown">
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Pages
 
@@ -58,7 +58,7 @@
     </ul>
   </div>
     </div> 
-    <div class="col-sm-2">
+    <div class="col-sm-2" id="btn-dx">
 
     <div class="dropdown">
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Style
