--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 	content.contentWindow.document.head.appendChild(imported);*/
 	 var content = document.getElementById("Iframe");
      	content.contentWindow.document.getElementById("scri").setAttribute("href",script)
+	var ele = content.contentWindow.document.getElementById("scri")
+	alert(ele.href)
 		  
 	  }
   </script>
