--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 	content.contentWindow.document.head.appendChild(imported);*/
 	 var content = document.getElementById("Iframe");
      	content.contentWindow.document.getElementById("scri").setAttribute("href",script)
-	var ele = content.contentWindow.document.getElementById("scri")
-	alert(ele.href)
+	var ele = content.contentWindow.document.getElementById("scri").getAttribute("href"); // sec/IF00.html
+
+	alert(ele)
 		  
 	  }
   </script>
