--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	 var content = document.getElementById("Iframe");
      	content.contentWindow.document.getElementById("scri").setAttribute("href",script)
 	var ele = content.contentWindow.document.getElementById("scri").getAttribute("href"); // sec/IF00.html
+	content.attr("src", "http://www.example.com/");
 
 	alert(ele)
 		  
