--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	 var content = document.getElementById("Iframe");
      	content.contentWindow.document.getElementById("scri").setAttribute("href",script)
 	var ele = content.contentWindow.document.getElementById("scri").getAttribute("href"); // sec/IF00.html
-	content.src = address;
+	content.src = "docs/bloomberg/index.html";
 
 		  
 	  }
