--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
 	var imported = document.createElement('script');
 	imported.src = 'js/new.js';
 	content.contentWindow.document.head.appendChild(imported);*/
-	 var content = document.getElementById("Iframe");
+	var content = document.getElementById("Iframe");
+		  	var ele = content.contentWindow.document.getElementById("scri").getAttribute("href"); // sec/IF00.html
+	alert(ele)
      	content.contentWindow.document.getElementById("scri").setAttribute("href",script)
-	var ele = content.contentWindow.document.getElementById("scri").getAttribute("href"); // sec/IF00.html
+		  	var ele = content.contentWindow.document.getElementById("scri").getAttribute("href"); // sec/IF00.html
+	alert(ele)
+	
 	content.src = content.src;
 		  
   
