--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 	imported.src = 'js/new.js';
 	content.contentWindow.document.head.appendChild(imported);*/
 	var content = document.getElementById("Iframe");
-		  	var ele = content.contentWindow.document.getElementById("scri").getAttribute("href"); // sec/IF00.html
-	alert(ele)
-     	content.contentWindow.document.getElementById("scri").setAttribute("href",script)
+	//	  	var ele = content.contentWindow.document.getElementById("scri").getAttribute("href"); // sec/IF00.html
+	//alert(ele)
+     	content.contentWindow.document.getElementById("scri").setAttribute("src",script)
 		  	var ele = content.contentWindow.document.getElementById("scri").getAttribute("href"); // sec/IF00.html
 	alert(ele)
 	
