--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	//	  	var ele = content.contentWindow.document.getElementById("scri").getAttribute("href"); // sec/IF00.html
 	//alert(ele)
      	content.contentWindow.document.getElementById("scri").setAttribute("src",script)
-		  	var ele = content.contentWindow.document.getElementById("scri").getAttribute("href"); // sec/IF00.html
+		  	var ele = content.contentWindow.document.getElementById("scri").getAttribute("src"); // sec/IF00.html
 	alert(ele)
 	
 	content.src = content.src;
