--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	var content = document.getElementById("Iframe");
 	//	  	var ele = content.contentWindow.document.getElementById("scri").getAttribute("href"); // sec/IF00.html
 	//alert(ele)
-     	content.contentWindow.document.getElementById("scri".src) = script
+     	content.contentWindow.document.getElementById("scri").src = script
 	
 	content.src = content.src;
 		  
