--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
      	content.contentWindow.document.getElementById('scri').src = script
 	var ele = content.contentWindow.document.getElementById("scri").getAttribute("src");
 	content.src = content.src;
+	alert(ele)
 
 		  
   
