--- a/index.html
+++ b/index.html
@@ -36,11 +36,16 @@
 	var content = document.getElementById("Iframe");
 	//	  	var ele = content.contentWindow.document.getElementById("scri").getAttribute("href"); // sec/IF00.html
 	//alert(ele)
-     	content.contentWindow.document.getElementById('scri').src = script
-	var ele = content.contentWindow.document.getElementById("scri").getAttribute("src");
-	alert(ele)
-
+     	//content.contentWindow.document.getElementById('scri').src = script
+	//var ele = content.contentWindow.document.getElementById("scri").getAttribute("src");
+	//alert(ele)
 		  
+		element = content.contentWindow.document.createElement("script"); 
+		element.src = '..'..'js/new.js'; 
+		element.type = "text/javascript"; 
+		element.id = "scriptid"; 
+		content.contentWindow.document.getElementsByTagName("head")[0].appendChild(element); 
+	  
   
 	  }
   </script>
