--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	//alert(ele)
 		  
 		element = content.contentWindow.document.createElement("script"); 
-		element.src = '..'..'js/new.js'; 
+		element.src = '../../js/new.js' 
 		element.type = "text/javascript"; 
 		element.id = "scriptid"; 
 		content.contentWindow.document.getElementsByTagName("head")[0].appendChild(element); 
