--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </header>
 
  <div id="content">
-    <iframe src="docs/bloomberg/index.html" width="100%" height="100%" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" >
+    <iframe src="" width="100%" height="100%" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" >
     </iframe>
 
   </div>
