--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="col-sm-5">
       <div id="menu">
     <ul> 
-      <li><a>Disclaimner</a></li>
+      <li><a>Disclaimer</a></li>
       <li><a>Documentation</a></li>
       <li><a>About</a></li>
       <li><a id="active">Cover</a></li>
