--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <ul class="dropdown-menu">
       <li><a href="#" onclick=change_css('../../style/ancient.css')>I</a></li>
 
-      <li><a href="#">II</a></li>
+      <li><a href="#" onclick="change_css('../../XIXcenturystyle.css')">II</a></li>
       <li><a href="#">III</a></li>
       <li><a href="#" onclick="change_css('../../style/css_primo_novecento_finale.css')">First 19th Century Style</a></li>
       <li><a href="#" onclick="change_css('../../style/css_fine_novecento_finale.css')">End Of 19th Century Style</a></li>
