--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="col-sm-5">
       <div id="menu">
     <ul> 
-      <li><a>Disclaimer</a></li>
+      <li><a href="site_documentation/Disclaimer.html" target="targetframe">Disclaimer</a></li>
       <li><a href="site_documentation/Documentation.html" target="targetframe">Documentation</a></li>
       <li><a>About</a></li>
       <li><a id="active">Cover</a></li>
