--- a/site_documentation/Disclaimer.html
+++ b/site_documentation/Disclaimer.html
@@ -10,7 +10,7 @@
 </head>
   <div class="container">
     <h1> Disclaimer </h1>
-      <div class="infos">
+      <div class="main">
       <p> This web site provides six layouts for documents, one for every historical period.</p>
       <p> TTTT project is a trans-historical, typographic, theming tour de force. It's a project for the Information Modeling and Web Technologies course held by Fabio Vitali at Bologna University for the course of Master Degree in Digital Humanities and Digital Knowledge (DHDK)</p>
       <p> The documents here are used for this web site presentation but the publication do not want to replace the content on the original web site. </p>
