--- a/site_documentation/Disclaimer.html
+++ b/site_documentation/Disclaimer.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <!-- CSS DISCLAIMER HERE -->
-  <link rel="stylesheet" href="./disclaimer_css">
+  <link rel="stylesheet" href="./disclaimer.css">
   
 </head>
   <div class="container">
