--- a/site_documentation/Disclaimer.html
+++ b/site_documentation/Disclaimer.html
@@ -6,6 +6,8 @@
   
   <!-- CSS DISCLAIMER HERE -->
   <link rel="stylesheet" href="./disclaimer.css">
+                  <link href='http://fonts.googleapis.com/css?family=Hammersmith+One|Questrial' rel='stylesheet' type='text/css'>
+                <script src="js/modernizr.custom.63321.js"></script>
   
 </head>
   <div class="container">
