--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div id="menu">
     <ul> 
       <li><a href="site_documentation/Disclaimer.html" target="targetframe">Disclaimer</a></li>
-      <li><a href="site_documentation/Documentation.html" target="targetframe">Documentation</a></li>
+      <li><a href="https://tttproject.github.io/documentation/documentation.html" target="targetframe">Documentation</a></li>
       <li><a>About</a></li>
       <li><a id="active">Cover</a></li>
     </ul>
