--- a/site_documentation/Disclaimer.html
+++ b/site_documentation/Disclaimer.html
@@ -10,6 +10,7 @@
                 <script src="js/modernizr.custom.63321.js"></script>
   
 </head>
+<body>
   <div class="container main">
     <h1> Disclaimer </h1>
       <div >
@@ -29,4 +30,5 @@
      <p class="card-text text-center">All copyright on the typographic are 2019 © TTTproject</p>
 </div>
 </div>
+    </body>
 </html>
