--- a/site_documentation/Disclaimer.html
+++ b/site_documentation/Disclaimer.html
@@ -10,7 +10,7 @@
                 <script src="js/modernizr.custom.63321.js"></script>
   
 </head>
-<body>
+<body class="demo-3">
   <div class="container main">
     <h1> Disclaimer </h1>
       <div >
