--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <ul> 
       <li><a href="site_documentation/Disclaimer.html" target="targetframe">Disclaimer</a></li>
       <li><a href="https://tttproject.github.io/documentation/documentation.html" target="targetframe">Documentation</a></li>
-      <li><a href="https://tttproject.github.io/about/about.html">About</a></li>
+      <li><a href="https://tttproject.github.io/about/about.html" target="targetframe">About</a></li>
       <li><a id="active">Cover</a></li>
     </ul>
 </div>
