--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
       <li><a href="docs/huffington/Huffington_Final.html" target="targetframe">Huffington</a></li>
       <li><a href="docs/thecut/thecut.html" target="targetframe">The Cut</a></li>
       <li><a href="docs/tls/TimesLiterarySupplement_Final.html" target="targetframe">TLS</a></li>
-    </ul>
+     <li><a href="docs/Eu_directive/eu_directive.html" target="targetframe">Eu Directive</a></li>
+	    </ul>
   </div>
     </div> 
     <div class="col-sm-2" id="btn-dx">
