--- a/about/about.html
+++ b/about/about.html
@@ -113,6 +113,7 @@ html {
     </div>
   </div>
 </div>
+				<p>The [Name of our project] is a project realized by Davide Apolloni, Christian Colonna and Hizkiel Mitiku, students at Alma Mater Studiorum - Università degli studi di Bologna.</p>
 				
 			</section>
 		</div>
