--- a/about/about.html
+++ b/about/about.html
@@ -114,7 +114,7 @@ html {
   </div>
 </div>
 				<br>
-				<p>The [Name of our project] is a project realized by Davide Apolloni, Christian Colonna and Hizkiel Mitiku, students at Alma Mater Studiorum - Università degli studi di Bologna.</p>
+				<center><p>The [Name of our project] is a project realized by Davide Apolloni, Christian Colonna and Hizkiel Mitiku, students at Alma Mater Studiorum - Università degli studi di Bologna.</p></center>
 				
 			</section>
 		</div>
