--- a/index.html
+++ b/index.html
@@ -25,8 +25,22 @@
 
  function change_css(item){
      var content = document.getElementById("Iframe");
-     content.contentWindow.document.getElementById("style").setAttribute("href",item)
      
+	if (content.contentWindow.document.getElementById("style") !== null) {
+		content.contentWindow.document.getElementById("style").setAttribute("href",item);
+	} else {
+		
+	// HERE WE MANAGE EU DIRECTIVE DOUBLE STYLE CHANGE (IT HAS 2 Iframe ELEMENT )
+		var content_english = document.getElementById("left");
+		var content_italian = document.getElementById("right");
+		content_english.contentWindow.document.getElementById("style").setAttribute("href",item);
+		
+		content_english.contentWindow.document.getElementById("style").setAttribute("href",item);
+	}
+ }
+		
+	 
+	 
      /*theme.href = item
 	var form = content.contentWindow.document.getElementById('myForm');
 	document.getElementById("demo").innerHTML = form.innerText;*/
