--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script src="script/1.js"></script> 
 
   <title>Home</title>
-  <script>
+  <script type="text/javascript">
  
 
 	  // Works with $.get too!
