--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		var content_italian = document.getElementById("right");
 		content_english.contentWindow.document.getElementById("style").setAttribute("href",item);
 		
-		content_english.contentWindow.document.getElementById("style").setAttribute("href",item);
+		content_italian.contentWindow.document.getElementById("style").setAttribute("href",item);
 	}
  
 		
