--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		} else {
 		
 	// HERE WE MANAGE EU DIRECTIVE DOUBLE STYLE CHANGE (IT HAS 2 Iframe ELEMENT )
-		var content_english = document.getElementById("left");
-		var content_italian = document.getElementById("right");
+		var content_english = content.contenWindow.document.getElementById("left");
+		var content_italian = content.contentWindow.document.getElementById("right");
 		content_english.contentWindow.document.getElementById("style").setAttribute("href",item);
 		
 		content_italian.contentWindow.document.getElementById("style").setAttribute("href",item);
