--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		} else {
 		
 	// HERE WE MANAGE EU DIRECTIVE DOUBLE STYLE CHANGE (IT HAS 2 Iframe ELEMENT )
-		var content_english = content.contenWindow.document.getElementById("left");
+		var content_english = content.contentWindow.document.getElementById("left");
 		var content_italian = content.contentWindow.document.getElementById("right");
 		content_english.contentWindow.document.getElementById("style").setAttribute("href",item);
 		
