--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="col-sm-5">
       <div id="menu">
     <ul> 
-      <li><a href="site_documentation/Disclaimer.html" target="targetframe">Disclaimer</a></li>
+      <li><a href="https://tttproject.github.io/disclaimer/disclaimer.html" target="targetframe">Disclaimer</a></li>
       <li><a href="https://tttproject.github.io/documentation/documentation.html" target="targetframe">Documentation</a></li>
       <li><a href="https://tttproject.github.io/about/about.html" target="targetframe">About</a></li>
       <li><a id="active">Cover</a></li>
