--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <li><a href="https://tttproject.github.io/disclaimer/disclaimer.html" target="targetframe">Disclaimer</a></li>
       <li><a href="https://tttproject.github.io/documentation/documentation.html" target="targetframe">Documentation</a></li>
       <li><a href="https://tttproject.github.io/about/about.html" target="targetframe">About</a></li>
-      <li><a id="active">Cover</a></li>
+      <li><a href="https://tttproject.github.io/cover/cover.html">Cover</a></li>
     </ul>
 </div>
 	
