--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Name of our project - Documentation</title>
+		<title>Styleme - Documentation</title>
 		<meta name="description" content="Custom Heading Set Styling with CSS" />
 		<meta name="keywords" content="headings, h1, h2, h3, styling, css, vertical rythm, custom, creative, styles" />
 		<meta name="author" content="Codrops" />
@@ -19,12 +19,12 @@
 			<header>
 			
 				<h1><strong>TTT Project: </strong>Trans-historical Typographic Theming Tour-de-force</h1>
-				<h1>[Name of our project]</h1>
+				<h1>StyleMe</h1>
 				<h2>A journey through different styles</h2>
 			</header>
 			
 			<section class="main">
-				<h1>What is the [Name of our project?]</h1>
+				<h1>What is StyleMe</h1>
 
 				<p>This project is aimed at creating some themes that are historically accurate and sufficiently generic to be applicable to any type of document, including more modern ones. The HTML pages loaded with the stlyes we customized will look like a document from a specific historical period. We took into consideration the supportin material of the writing, the font families, the sizes, the colors, the margins, the images and many other aspects.</p>
 				<br>
