--- a/disclaimer/disclaimer.html
+++ b/disclaimer/disclaimer.html
@@ -18,7 +18,7 @@
 			
 			<header>
 			
-				<h1><strong>StyleMe: </strong>A journey through different styles</h1>
+				<h1><strong>StyleMe:</h1> </strong><h2>A journey through different styles.</h2>
 			</header>
 			
 			<section class="main">
