--- a/disclaimer/disclaimer.html
+++ b/disclaimer/disclaimer.html
@@ -17,8 +17,7 @@
 		<div class="container">
 			
 			<header>
-			
-				<h1><strong>StyleMe:</h1> </strong><h2>A journey through different styles.</h2>
+				<h1><strong>StyleMe: </strong><i>A journey through different styles</i>.</h1>
 			</header>
 			
 			<section class="main">
