--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -17,10 +17,7 @@
 		<div class="container">
 			
 			<header>
-			
-				<h1><strong>TTT Project: </strong>Trans-historical Typographic Theming Tour-de-force</h1>
-				<h1>StyleMe</h1>
-				<h2>A journey through different styles</h2>
+			<h1><strong>StyleMe: </strong><i>A journey through different styles</i>.</h1>
 			</header>
 			
 			<section class="main">
