--- a/about/about.html
+++ b/about/about.html
@@ -75,6 +75,8 @@ html {
 			
 			<header>
 				<h1><strong>StyleMe</strong>: a journey through different styles</h1>
+				<br>
+				<h1>About</h1>
 			</header>
 			
 			<section class="main">
