--- a/about/about.html
+++ b/about/about.html
@@ -74,7 +74,7 @@ html {
 		<div class="container">
 			
 			<header>
-				<h1><strong>StyleMe</strong>: a journey through different styles</h1>
+				<h1><strong>StyleMe</strong>: <i>a journey through different styles</i>.</h1>
 				<br>
 				<h1>About</h1>
 			</header>
