--- a/disclaimer/disclaimer.html
+++ b/disclaimer/disclaimer.html
@@ -18,11 +18,12 @@
 			
 			<header>
 				<h1><strong>StyleMe: </strong><i>A journey through different styles</i>.</h1>
+				<br>
+				<h1>About</h1>
+
 			</header>
 			
 			<section class="main">
-				<h1>Disclaimer</h1>
-
 				<p> This web site provides six layouts for documents, one for every historical period.</p>
 				<p></p>
 				<br>
