--- a/disclaimer/disclaimer.html
+++ b/disclaimer/disclaimer.html
@@ -19,7 +19,7 @@
 			<header>
 				<h1><strong>StyleMe: </strong><i>A journey through different styles</i>.</h1>
 				<br>
-				<h1>About</h1>
+				<h1>Disclaimer</h1>
 
 			</header>
 			
