--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <span class="caret"></span></button> 
     <ul class="dropdown-menu">
       <li><a href="#" onclick="change_css('../../style/ancient.css')">Before 1500AC</a></li>
-      <li><a href="#" onclick="change_css('style/XIXcenturystyle.css')">XIX Century</a></li>
-      <li><a href="#" onclick="change_css('style/1950style.css')">First half of the XX Century</a></li>
+      <li><a href="#" onclick="change_css('TTTproject.github.io/style/XIXcenturystyle.css')">XIX Century</a></li>
+      <li><a href="#" onclick="change_css('TTTproject.github.io/style/1950style.css')">First half of the XX Century</a></li>
       <li><a href="#" onclick="change_css('../../style/css_primo_novecento_finale.css')">Second half of the XX Century</a></li>
       <li><a href="#" onclick="change_css('../../style/css_fine_novecento_finale.css')">Late XX Century</a></li>
       <li><a href="#" onclick ="add_script('../../style/slide.css','../../js/new.js')">Future</a></li>
