--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -64,7 +64,8 @@
 				</a>
 
 				<h2></i>Late XX Century (print)</h2>
-				<p>Christian write something here please.</p>
+				<p>This style is based on magazines of the end of century. This magazines presents big image and big titles on the main cover page. Titles were always coloured with bright cheerful colours.</p>
+				<p>Pages were of smooth, polished, shiny white. The font doesn't present aggressive edges, but a rounded way that makes the reader feel in an age without concerns.</p>
 				<br>
 				<a href="images/style5.png">
 				<img src="images/style5.png" alt="style5" class="responsive"/>
