--- a/about/about.html
+++ b/about/about.html
@@ -108,7 +108,7 @@ html {
       <div class="container">
         <h2>Hizkiel Mitiku</h2>
         <p>Student of Digital Humanities and Digital Knowledge at Bologna's University.</p><br>
-        <p>example@example.com</p>
+        <p>hizkiel.alemayehu@studio.unibo.it</p>
       </div>
     </div>
   </div>
