--- a/cover/cover.html
+++ b/cover/cover.html
@@ -173,6 +173,8 @@ header:after {
 }
 </style>
 
+<link rel="stylesheet" id="style" type="text/css" href="">
+
 <div class="wrapper">
   <header class="header"><h1>StyleMe</h1>
     <h3><i>A journey through different styles</i></h3>
