--- a/cover/cover.html
+++ b/cover/cover.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <style>
 *, *:before, *:after { 
   box-sizing: border-box;
@@ -174,7 +178,7 @@ header:after {
 </style>
 
 <link rel="stylesheet" id="style" type="text/css" href="">
-
+ </head>
 <div class="wrapper">
   <header class="header"><h1>StyleMe</h1>
     <h3><i>A journey through different styles</i></h3>
@@ -214,3 +218,4 @@ header:after {
     <p>How will the news be spread in the future?</p>
   </article>
 </div>
+</html>
