--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@ function checkCss(){
 				      'https://tttproject.github.io/style/1950style.css',
 				      'https://tttproject.github.io/style/css_fine_novecento_finale.css'
 				     ]
-		 var randomIndex = Math.floor(Math.random()*6)
+		 var randomIndex = Math.floor(Math.random()*6);
+		 console.log("im randomCss i work i return "+ cssSheetsHref[randomIndex] + " random index is " + randomIndex);
 		 return cssSheetsHref[randomIndex];
+
 	 }
 	 </script>
 	 <script type="text/javascript">
