--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function checkCss(){
 	var css = document.getElementById("Iframe").contentWindow.document.getElementById("style").href;
 	var iframe = document.getElementById("Iframe").href;
 	var css2 = document.getElementById("Iframe").contentWindow.document.getElementById("style");
-	console.log("im check css i print this, ifram: " + iframe + " css2 " + css2");
+	console.log("im check css i print this, ifram: " + iframe + " css2 " + css2);
 	if (css === '') { 
 		console.log("I'm checkCSS i print false, style.href === '' "); 
 		return false; }
